--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "version": "0.1.3",
   "author": "Denis Ciccale (@tdecs)",
   "homepage": "http://css2stylus.com",
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/dciccale/css2stylus.js.git"
-    }
-  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dciccale/css2stylus.js.git"
+  }
   "bugs": {
     "url": "http://github.com/dciccale/css2stylus.js/issues"
   },
