--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
   "bin": {
     "css2stylus": "./bin/css2stylus"
   },
+  "scripts": {
+    "test": "./node_modules/.bin/nodeunit test/*.js"
+  },
   "preferGlobal": "true",
   "dependencies": {
     "yargs": "3.*.*"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodeunit": "^0.9.1"
+  },
   "keywords": [
     "css2stylus",
     "css",
