Housekeeping with new examples

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
       "name": "Jonathan Dumaine",
       "email": "jonathan.dumaine@dumstruck.com",
       "web": "http://www.jonathan-dumaine.com"
+    },
+    {
+      "name": "Kyle King",
+      "email": "kmking72@gmail.com",
+      "web": "http://kyleking.me"
     }
   ],
   "repository": {
